# r_phy

./: Cargo.toml
entity/: Cargo.toml
entity/src/: archetype.rs  context.rs  entity.rs  index.rs  lib.rs  operation.rs  stage.rs  system.rs
graphics/: Cargo.toml
graphics/src/: error.rs  lib.rs  model.rs  renderer.rs  shader.rs
graphics/src/model/: gltf.rs  material.rs  mesh.rs
graphics/src/renderer/: camera.rs
graphics/src/renderer/camera/: first_person.rs
input/: Cargo.toml
input/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs  transform.rs
math/src/types/: matrix.rs  quat.rs  vector.rs
physics/: Cargo.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
system/: Cargo.toml
system/src/: ecs.rs  error.rs  lib.rs  system.rs
system/src/ecs/: archetype.rs  context.rs  entity.rs  index.rs  operation.rs  system.rs
system/src/system/: command.rs  control.rs  frame.rs  input.rs  renderer.rs
type_kit/: Cargo.toml
type_kit/src/: allocator.rs  drop_guard.rs  gen_collection.rs  lib.rs  task_list.rs  type_guard.rs  type_list.rs  type_map.rs  union_list.rs
type_kit/src/type_list/: macros.rs  marker.rs  nodes.rs  tests.rs  traits.rs  types.rs
type_kit/src/type_list/traits/: contains.rs  list.rs  marker.rs
type_kit/src/type_list/traits/list/: bool.rs  optional.rs  subset.rs
type_kit/src/type_list/types/: index.rs  node.rs
vulkan/src/: context.rs  lib.rs
vulkan/src/context/: device.rs  error.rs
vulkan/src/context/device/: command.rs  descriptor.rs  frame.rs  framebuffer.rs  memory.rs  pipeline.rs  raw.rs  resources.rs  swapchain.rs
vulkan/src/context/device/descriptor/: presets.rs  writer.rs
vulkan/src/context/device/pipeline/: graphics.rs  push_constant.rs
vulkan/src/context/device/raw/: allocator.rs  range.rs  resources.rs  unique.rs
vulkan/src/context/device/renderer/: deferred.rs
vulkan_high/: Cargo.toml
vulkan_high/src/: context.rs  error.rs  frame.rs  lib.rs  renderer.rs  resources.rs
vulkan_high/src/renderer/: deferred.rs  frame.rs  storage.rs
vulkan_high/src/renderer/deferred/: commands.rs  draw_graph.rs  presets.rs  resources.rs  stage.rs  storage.rs
vulkan_high/src/renderer/deferred/stage/: depth_prepass.rs  draw_skybox.rs  gbuffer_combine.rs  gbuffer_write.rs  load_resources.rs
vulkan_high/src/renderer/deferred/storage/: command.rs  draw.rs
vulkan_high/src/resources/: common.rs  material.rs  mesh.rs  pipeline.rs  skybox.rs
vulkan_high/src/resources/material/: list.rs  pack.rs
vulkan_high/src/resources/mesh/: list.rs  pack.rs
vulkan_high/src/resources/pipeline/: list.rs  pack.rs
vulkan_low/: Cargo.toml
vulkan_low/src/: debug.rs  device.rs  error.rs  lib.rs  memory.rs  resources.rs  surface.rs
vulkan_low/src/device/: error.rs  memory.rs  raw.rs
vulkan_low/src/device/raw/: allocator.rs  resources.rs
vulkan_low/src/device/raw/allocator/: page.rs  static.rs  unpooled.rs
vulkan_low/src/device/raw/resources/: buffer.rs  command.rs  descriptor.rs  framebuffer.rs  image.rs  memory.rs  pipeline.rs  render_pass.rs  swapchain.rs
vulkan_low/src/device/raw/resources/buffer/: persistent.rs  staging.rs  uniform.rs
vulkan_low/src/device/raw/resources/descriptor/: writer.rs
vulkan_low/src/device/raw/resources/framebuffer/: presets.rs
vulkan_low/src/device/raw/resources/image/: sampler.rs  texture.rs  view.rs
vulkan_low/src/device/raw/resources/image/texture/: reader.rs
vulkan_low/src/device/raw/resources/layout/: descriptor.rs  pipeline.rs
vulkan_low/src/device/raw/resources/layout/presets/: descriptor.rs  pipeline.rs
vulkan_low/src/device/raw/resources/pipeline/: graphics.rs  push_constant.rs  states.rs
vulkan_low/src/device/raw/resources/pipeline/graphics/: list.rs  pack.rs
vulkan_low/src/device/raw/resources/pipeline/states/: presets.rs
vulkan_low/src/device/raw/resources/render_pass/: presets.rs
vulkan_low/src/memory/: allocator.rs  error.rs  range.rs
vulkan_low/src/memory/allocator/: map.rs  page.rs  static.rs  storage.rs  unpooled.rs
vulkan_low/src/resources/: buffer.rs  command.rs  descriptor.rs  error.rs  framebuffer.rs  image.rs  memory.rs  pipeline.rs  render_pass.rs  storage.rs  swapchain.rs  sync.rs
vulkan_low/src/resources/buffer/: persistent.rs  staging.rs  uniform.rs
vulkan_low/src/resources/command/: pool.rs  recording.rs
vulkan_low/src/resources/command/pool/: level.rs
vulkan_low/src/resources/descriptor/: writer.rs
vulkan_low/src/resources/image/: sampler.rs  texture.rs  view.rs
vulkan_low/src/resources/image/texture/: reader.rs
vulkan_low/src/resources/layout/: descriptor.rs  pipeline.rs
vulkan_low/src/resources/layout/presets/: descriptor.rs  pipeline.rs
vulkan_low/src/resources/pipeline/: graphics.rs  push_constant.rs  states.rs
vulkan_low/src/resources/render_pass/: presets.rs
(+63 files in other folders)
