[workspace]
resolver = "2"
members = [ 
    "type_kit",
    "math",
    "system",
    "graphics",
    "input",
    "sandbox",
    "physics",
    "vulkan_low",
    "vulkan_high",
    "entity",
]

[workspace.dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
winit = "0.29.10"
colored = "2.1.0"
ash = "0.37.3"
rayon = "1.11.0"
