[workspace]
resolver = "3"
members = [ 
    "type_kit",
    "math",
    "system",
    "graphics",
    "sandbox",
    "physics",
    "vulkan_low",
    "vulkan_high",
    "entity",
]

[workspace.dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
winit = "0.29.10"
colored = "3.0.0"
ash = "0.37.3"
rayon = "1.11.0"
base64 = "0.22.1"
glob = "0.3.3"
gltf = "1.4.1"
png = "0.17.16"

[profile.dev]
debug = 2
