[package]
name = "graphics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { workspace = true }
gltf = { workspace = true }
winit = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
math = { path = "../math" }
physics = { path = "../physics" }
colored = { workspace = true }
type_kit = { path = "../type_kit" }
