[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"
default-run = "sandbox"

[dependencies]
winit = { workspace = true }
math = { path = "../math" }
system = { path = "../system" }
entity = { path = "../entity" }
physics = { path = "../physics" }
type_kit = { path = "../type_kit" }
graphics = { path = "../graphics" }
vulkan_high = { path = "../vulkan_high" }
