[package]
name = "vulkan_high"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
colored = { workspace = true }
bytemuck = { workspace = true }
math = { path = "../math" }
type_kit= { path = "../type_kit" }
strum = { version = "0.26.1", features = ["derive"] }
png = "0.17.13"
physics = { path = "../physics" } 
graphics = {path = "../graphics" }
vulkan_low = {path = "../vulkan_low" }
