[package]
name = "vulkan_high"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { workspace = true }
winit = { workspace = true }
colored = { workspace = true }
bytemuck = { workspace = true }
math = { path = "../math" }
physics = { path = "../physics" } 
graphics = {path = "../graphics" }
type_kit = { path = "../type_kit" }
vulkan_low = {path = "../vulkan_low" }
