[package]
name = "vulkan_low"
version = "0.1.0"
edition = "2024"

[dependencies]
png = { workspace = true }
ash = { workspace = true }
strum = { workspace= true }
winit = { workspace = true }
colored = { workspace = true }
bytemuck = { workspace = true }
math = { path = "../math" }
physics = { path = "../physics" } 
type_kit = { path = "../type_kit" }
graphics = { path = "../graphics" }
